<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="body_max_index_calculator">Body Mass Index Calculator</string>
    <string name="todo">TODO</string>
    <string name="designed_by_bingjunior">Designed by bingJunior</string>
    <string name="button">Calculate</string>
    <string name="weight_in_kg">Weight in Kg</string>
    <string name="height_in_cm">Height in cm</string>
</resources>